--- a/css/newsbaby.css
+++ b/css/newsbaby.css
@@ -28,8 +28,11 @@
 /* end featured */
 
 /* General */
+.navbar-inner {
+  min-height: 32px;
+}
 .navbar .nav > li > a { 
-  padding: 5px 15px 10px; 
+  padding: 5px 15px 5px; 
 }
 
 footer {
