--- a/css/newsbaby.css
+++ b/css/newsbaby.css
@@ -46,6 +46,10 @@ h1,h2,h3 {
 margin: 4px 8px;
 }
 
+header {
+  padding-bottom: 20px;
+}
+
 footer {
   background: #222;
   border-top: 2px solid #444;
