--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>
-            Avisen Nyheter - Det gode liv i Liverpool
+            {% if page.title %} {{ page.title }} | {% endif %} Avis Digital
         </title>
         <meta name="description" content="Det gode liv i Liverpool.">
         <meta name="x-country" content="no">
