Jekyll content and gitignore

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -108,7 +108,9 @@ bbcdotcom.advert.write('top', 'http://ad.mo.doubleclick.net/DARTProxy/mobile.han
                         </script>
                     </div>
                     <div class="container c-open">
-                        yay
+
+                        {{ content }}
+                        
                     </div>
                 </div>
             </div>
