--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,12 +55,7 @@ if ('querySelector' in document && 'localStorage' in window && 'addEventListener
         <!--<![endif]-->
         <script type="text/javascript">
 /*<![CDATA[*/ bbcFlagpoles_istats = 'ON'; istatsTrackingUrl = '//sa.bbc.co.uk/bbc/bbc/s?name=news.world.europe.story.21363098.page&cps_asset_id=21363098&page_type=Story&section=%2Fnews%2Fworld%2Feurope&first_pub=2013-02-06T23%3A27%3A08%2B00%3A00&last_editorial_update=2013-02-07T09%3A27%3A46%2B00%3A00&title=EU+leaders+set+for+crucial+budget+summit&for_nation=no&pal_route=asset&ml_name=barlesque&app_type=mobile-web&language=en-GB&ml_version=0.16.1&pal_webapp=tabloid&prod_name=news&app_name=news'; if (window.istats_countername) { istatsTrackingUrl = istatsTrackingUrl.replace(/([?&]name=)[^&]+/ig, '$1' + istats_countername); } (function() { if ( /\bIDENTITY=/.test(document.cookie) ) { istatsTrackingUrl += '&bbc_identity=1'; } var c = (document.cookie.match(/\bckns_policy=(\d\d\d)/)||[]).pop() || ''; istatsTrackingUrl += '&bbc_mc=' + (c? 'ad'+c.charAt(0)+'ps'+c.charAt(1)+'pf'+c.charAt(2) : 'not_set'); if ( /\bckns_policy=\d\d0/.test(document.cookie) ) { istatsTrackingUrl += '&ns_nc=1'; } var screenWidthAndHeight = 'unavailable'; if (window.screen && screen.width && screen.height) { screenWidthAndHeight = screen.width + 'x' + screen.height; } istatsTrackingUrl += ('&screen_resolution=' + screenWidthAndHeight); istatsTrackingUrl += '&blq_s=3.5&blq_r=3.5&blq_v=default-worldwide'; })(); /*]]>*/
-        </script><!-- Begin iStats 20100118 (UX-CMC 1.1009.3) --><script type="text/javascript">
-/*<![CDATA[*/ (function() { window.istats || (istats = {}); var cookieDisabled = (document.cookie.indexOf('NO-SA=') != -1), hasCookieLabels = (document.cookie.indexOf('sa_labels=') != -1), hasClickThrough = /^#sa-(.*?)(?:-sa(.*))?$/.test(document.location.hash), runSitestat = !cookieDisabled && !hasCookieLabels && !hasClickThrough && !istats._linkTracked; if (runSitestat && bbcFlagpoles_istats === 'ON') { sitestat(istatsTrackingUrl); } else { window.ns_pixelUrl = istatsTrackingUrl; /* used by Flash library to track */ } function sitestat(n){var j=document,f=j.location,b="";if(j.cookie.indexOf("st_ux=")!=-1){var k=j.cookie.split(";");var e="st_ux",h=document.domain,a="/";if(typeof ns_!="undefined"&&typeof ns_.ux!="undefined"){e=ns_.ux.cName||e;h=ns_.ux.cDomain||h;a=ns_.ux.cPath||a}for(var g=0,f=k.length;g<f;g++){var m=k[g].indexOf("st_ux=");if(m!=-1){b="&"+unescape(k[g].substring(m+6))}}document.cookie=e+"=; expires="+new Date(new Date().getTime()-60).toGMTString()+"; path="+a+"; domain="+h}ns_pixelUrl=n;n=ns_pixelUrl+"&ns__t="+(new Date().getTime())+"&ns_c="+((j.characterSet)?j.characterSet:j.defaultCharset)+"&ns_ti="+escape(j.title)+b+"&ns_jspageurl="+escape(f&&f.href?f.href:j.URL)+"&ns_referrer="+escape(j.referrer);if(n.length>2000&&n.lastIndexOf("&")){n=n.substring(0,n.lastIndexOf("&")+1)+"ns_cut="+n.substring(n.lastIndexOf("&")+1,n.lastIndexOf("=")).substring(0,40)}(j.images)?new Image().src=n:j.write('<p><i'+'mg src="'+n+'" height="1" width="1" alt="" /><\/p>')}; })(); /*]]>*/
-        </script><noscript>
-        <p style="position: absolute; top: -999em;">
-            <img src="//sa.bbc.co.uk/bbc/bbc/s?name=news.world.europe.story.21363098.page&amp;cps_asset_id=21363098&amp;page_type=Story&amp;section=%2Fnews%2Fworld%2Feurope&amp;first_pub=2013-02-06T23%3A27%3A08%2B00%3A00&amp;last_editorial_update=2013-02-07T09%3A27%3A46%2B00%3A00&amp;title=EU+leaders+set+for+crucial+budget+summit&amp;for_nation=no&amp;pal_route=asset&amp;ml_name=barlesque&amp;app_type=mobile-web&amp;language=en-GB&amp;ml_version=0.16.1&amp;pal_webapp=tabloid&amp;prod_name=news&amp;app_name=news&amp;blq_s=3.5&amp;blq_r=3.5&amp;blq_v=default-worldwide" height="1" width="1" alt="">
-        </p></noscript><!-- End iStats (UX-CMC) -->
+        </script>
         <div id="blq-global">
             <div id="blq-pre-mast"></div>
         </div>
@@ -110,7 +105,7 @@ bbcdotcom.advert.write('top', 'http://ad.mo.doubleclick.net/DARTProxy/mobile.han
                     <div class="container c-open">
 
                         {{ content }}
-                        
+
                     </div>
                 </div>
             </div>
