remove cookie script

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,11 +81,10 @@ if ('querySelector' in document && 'localStorage' in window && 'addEventListener
                     </ul>
                 </div>
                 <div id="blq-panel"></div>
-            </div><script type="text/html" id="blq-bbccookies-tmpl">
-<![CDATA[ <section> <div id="bbccookies" class="bbccookies-banner orb-banner-wrapper"> <div id="bbccookies-prompt" class="orb-banner b-g-p b-r b-f"> <h2 class="orb-banner-title"> Cookies on the BBC website </h2> <p class="orb-banner-content"> We use cookies to ensure that we give you the best experience on our website. We also use cookies to ensure we show you advertising that is relevant to you. If you continue without changing your settings, we'll assume that you are happy to receive all cookies on the BBC website. However, if you would like to, you can change your cookie settings at any time. </p> <ul class="orb-banner-options"> <li id="bbccookies-continue"> <button type="button" id="bbccookies-continue-button">Continue</button> </li> <li id="bbccookies-settings"> <a href="/privacy/cookies/managing/cookie-settings.html">Change settings</a> </li> <li id="bbccookies-more"><a href="/privacy/cookies/bbc">Find out more</a></li></ul> </div> </div> </section> ]]>
-            </script> <script type="text/javascript">
-/*<![CDATA[*/ (function(){if(bbccookies._showPrompt()){var f=document,b=f.getElementById("blq-pre-mast"),c=f.getElementById("blq-bbccookies-tmpl"),a,e;if(b&&f.createElement){a=f.createElement("div");e=c.innerHTML;e=e.replace("<"+"![CDATA[","").replace("]]"+">","");a.innerHTML=e;b.appendChild(a);blqCookieContinueButton=f.getElementById("bbccookies-continue-button");blqCookieContinueButton.onclick=function(){a.parentNode.removeChild(a);return false};bbccookies._setPolicy()}}})(); /*]]>*/
-            </script>
+            </div>
+
+
+
             <div id="blq-main">
                 <div class="site-brand" role="banner">
                     <div class="site-brand-inner">
