styling cleanup away from bbc

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,9 +46,10 @@
 
 
         <!-- Other Styles -->
-        <link rel="stylesheet" type="text/css" href="http://static.bbci.co.uk/frameworks/barlesque/2.25.0/mobile/3.5/style/main.css">
+        <link rel="stylesheet" type="text/css" href="./css/bbc/main.css">
         
         <link rel="stylesheet" type="text/css" href="css/newsbaby2.css">
+
         <script type="text/javascript" src="http://static.bbci.co.uk/bbcdotcom/0.3.166/script/mobile/smart.js"></script>
 
         <link type="text/css" rel="stylesheet" href="http://static.bbci.co.uk/news/1.4.7-11/stylesheets/core.css">
