--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,14 +46,14 @@
 
 
         <!-- Other Styles -->
-        
-        <link rel="stylesheet" type="text/css" href="./css/bbc/main.css">
+
+        <link rel="stylesheet" type="text/css" href="./css/bbc-main.css">
         
         <link rel="stylesheet" type="text/css" href="css/newsbaby2.css">
 
         <script type="text/javascript" src="http://static.bbci.co.uk/bbcdotcom/0.3.166/script/mobile/smart.js"></script>
 
-        <link type="text/css" rel="stylesheet" href="http://static.bbci.co.uk/news/1.4.7-11/stylesheets/core.css">
+        <link rel="stylesheet" type="text/css" href="./css/bbc-core.css">
 
 
 
