add imgs, link up articles

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,7 +75,7 @@ if ('querySelector' in document && 'localStorage' in window && 'addEventListener
             <div id="blq-mast" class="blq-rst">
                 <div id="blq-mast-bar">
                     <div id="blq-blocks">
-                        <a href="#">Avisen</a>
+                        <a href="/">Avisen</a>
                     </div>
                     <ul id="blq-nav">
                         <li>
@@ -100,7 +100,7 @@ if ('querySelector' in document && 'localStorage' in window && 'addEventListener
             <div id="blq-main">
                 <div class="site-brand" role="banner">
                     <div class="site-brand-inner">
-                        <a href="/news" id="brand">BBC News</a> <span class="beta-label">BETA</span> <a id="nav-button" href="#site-nav" data-event="top"><span class="cta">Seksjoner</span></a>
+                        <a href="/" id="brand">BBC News</a> <span class="beta-label">BETA</span> <a id="nav-button" href="#site-nav" data-event="top"><span class="cta">Seksjoner</span></a>
                     </div>
                 </div>
                 <div id="site-nav-panel">
