css tweaks and login link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,6 @@
         <!-- Bootstrap styles -->
         <link href="./css/bootstrap.min.css" rel="stylesheet">
         <link href="./css/bootstrap-responsive.min.css" rel="stylesheet">
-        <link href="./css/newsbaby.css" rel="stylesheet">
         <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
         <!--[if lt IE 9]>
             <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -48,13 +47,11 @@
         <!-- Other Styles -->
 
         <link rel="stylesheet" type="text/css" href="./css/bbc-main.css">
-        
-        <link rel="stylesheet" type="text/css" href="css/newsbaby2.css">
 
         <script type="text/javascript" src="http://static.bbci.co.uk/bbcdotcom/0.3.166/script/mobile/smart.js"></script>
 
         <link rel="stylesheet" type="text/css" href="./css/bbc-core.css">
-
+        <link href="./css/newsbaby.css" rel="stylesheet">
 
 
         <script id="news-loader" type="text/javascript">
@@ -79,7 +76,7 @@ if ('querySelector' in document && 'localStorage' in window && 'addEventListener
                     </div>
                     <ul id="blq-nav">
                         <li>
-                            <a href="#">Logg inn</a>
+                            <a href="buy.html">Logg inn</a>
                         </li>
                         <li>
                             <a href="#">Nyheter</a>
