--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -200,7 +200,7 @@ if ('querySelector' in document && 'localStorage' in window && 'addEventListener
                         <a href="#">Eiendom</a>
                     </li>
                     <li>
-                        <a href="#">Stilling ledig</a>
+                        <a href="#">Jobbmarked</a>
                     </li>
                     <li>
                         <a href="#">Bildeserier</a>
