--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,7 +76,7 @@
                             <a href="buy.html">Logg inn</a>
                         </li>
                         <li>
-                            <a href="#">Nyheter</a>
+                            <a href="news.html">Nyheter</a>
                         </li>
                         <li>
                             <a href="#">Været</a>
