--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -94,7 +94,7 @@
             <div id="blq-main">
                 <div class="site-brand" role="banner">
                     <div class="site-brand-inner">
-                        <a href="/" id="brand">BBC News</a> <span class="beta-label">BETA</span> <a id="nav-button" href="#site-nav" data-event="top"><span class="cta">Seksjoner</span></a>
+                        <a href="index.html" id="brand">NewsFront</a> <span class="beta-label">BETA</span> <a id="nav-button" href="#site-nav" data-event="top"><span class="cta">Seksjoner</span></a>
                     </div>
                 </div>
                 <div id="site-nav-panel">
