--- a/_layouts/zurb.html
+++ b/_layouts/zurb.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Foundation 4</title>
+  <title>NewsFront</title>
 
   <link rel="stylesheet" href="css/normalize.css" />
   
@@ -18,6 +18,29 @@
 
 </head>
 <body>
+
+  <nav class="top-bar">
+      <ul class="title-area">
+        <li class="name">
+          <h1><a href="/">NewsFront</a></h1>
+        </li>
+        <li class="toggle-topbar menu-icon"><a href="#"><span>Meny</span></a></li>
+      </ul>
+    <section class="top-bar-section">
+      <ul class="right">
+        <li class="divider"></li>
+        <li><a href="#">Nyheter</a></li>
+        <li class="divider"></li>
+        <li><a href="#">Meninger</a></li>
+        <li class="divider"></li>
+        <li><a href="#">Kultur</a></li>
+        <li class="divider"></li>
+        <li class="has-form">
+          <a href="#" class="button">Abonnér</a>
+        </li>
+      </ul>
+    </section>
+  </nav> 
 
     {{ content }}
 
