--- a/css/nfn.css
+++ b/css/nfn.css
@@ -3,6 +3,88 @@ body {
   /*background: #F6F6F6;*/
 }
 
+
+/* Top bar */
+.top-bar {
+  margin-bottom: 10px;
+}
+/*
+.top-bar-section li a:not(.button) {
+  background: white;
+  line-height: 45px;
+  padding: 0 15px;
+}*/
+
+/* TL menu */
+
+.tl-page {
+  background: #F4FAFC;
+  margin-top: -10px;
+  padding: 20px;
+  position: relative;
+  border-bottom: 1px solid #85A9B8;
+}
+
+.tl-page h2 {
+  text-align: center;
+  clear: both;
+  margin-bottom: 30px;
+}
+
+.tl-page section {
+  text-align: center;
+}
+
+.top-menu {
+  overflow: auto;
+}
+
+.top-menu ul {
+  text-align: center;
+}
+
+.top-menu li{
+  display: inline-block;
+  margin-right: 10px;
+  list-style: none;
+}
+
+.tl-page .story {
+  margin-bottom: 50px;
+}
+
+.top-menu a {
+  color: #0B5472;
+  text-shadow: -1px -1px 0px #ffffff;
+}
+
+.tl-button {
+  background: none repeat scroll 0 0 transparent;
+  border: 1px solid #85A9B8;
+  border-radius: 9px 9px 9px 9px;
+  font-family: Georgia,Times,"Times New Roman",serif;
+  font-size: 17px;
+  font-weight: 400;
+  padding: 15px 21px;
+  text-decoration: none;
+  transition: border-color 0.4s ease 0s;
+  white-space: nowrap;
+}
+
+.tl-button:hover {
+  border-color: #0B5472;
+}
+
+.title-short {
+  text-transform: uppercase;
+  font-weight: normal;
+  font-size: 14px;
+  margin: 0 0 -5px 0;
+}
+
+
+/* Elements */
+
 .panel ul {
   padding-left: 20px;
   font-size: 0.8em;
