--- a/_layouts/zurb.html
+++ b/_layouts/zurb.html
@@ -35,12 +35,20 @@
         <li class="divider"></li>
         <li><a href="#">Kultur</a></li>
         <li class="divider"></li>
-        <li class="has-form">
-          <a href="#" class="button">Abonnér</a>
+        <li class="">
+          <a href="#" class="">Abonnér</a>
         </li>
       </ul>
     </section>
   </nav> 
+
+  <header class="section-header">
+    <div class="row">
+      <div class="large-12 columns">
+        <h1><a href="#">Nyheter</a></h1>
+      </div>
+    </div>
+  </header>
 
     {{ content }}
 
