--- a/_layouts/zurb.html
+++ b/_layouts/zurb.html
@@ -53,6 +53,57 @@
     {{ content }}
 
 
+  <footer class="site-footer">
+
+    <div class="row">
+
+      <div class="contact-info large-3 columns center">
+          <img src="img/nf-logo.png" class="fixed-width">
+          <dl class="">
+            <dt>Postadresse:</dt>
+            <dd>Boks 1000 Sentrum, 0100 Oslo</dd>
+            <dt>Besøksadresse:</dt>
+            <dd>Akersgata 1, 0100 Oslo</dd>
+            <dt>Sentralbord/Redaksjonen:</dt>
+            <dd><a href="tel:+4705000">69300000</a></dd>
+          </dl>
+      </div>
+      
+      <div class="large-3 columns hide-for-small">
+              <dl>
+              <dt>Forsida ble sist oppdatert:</dt>
+              <dd><time>Tirsdag 30.05.2013, 17:04</time></dd>
+          </dl>
+      </div>
+      
+      <div class="large-3 columns hide-for-small">
+        <nav>
+            <ul>
+              <li><a href="http://www.dagbladet.no/stillinger/">Jobb i NewsFront</a></li>
+              <li><a href="#">Link 2</a></li>
+              <li><a href="#">Personvernavtale</a></li>
+            </ul>
+          </nav>
+      </div>
+      
+      <div class="large-3 columns hide-for-small">
+        <div href="#" class="inverse button dropdown radius tip">
+            <a href="#">Tips oss <span class="tel">6700</span></a>
+            <span></span>
+        </div>
+      </div>
+
+      <hr>
+      
+      <div class="large-12 columns">
+        <p class="the-end">
+          <strong>Ansvarlig redaktør: </strong> <a href="mailto:fake@newsfront.no">Ola Nordmann</a>
+          <span class="frontkom-logo">© 2013</span> <a href="#" >Drupal CMS: <span >Frontkom</span></a>
+        </p>
+      </div>
+    </div>
+  </footer>
+
   <script>
   document.write('<script src=' +
   ('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
