--- a/css/nfn.css
+++ b/css/nfn.css
@@ -190,6 +190,12 @@ img {
   width: 100%;
 }
 
+.fixed-width {
+  width: auto;
+  display: inline-block;
+  clear: both;
+}
+
 .image {
   margin: 0 -15px 0 -15px; 
 }
@@ -239,6 +245,18 @@ img {
 
 .meta .last {
   margin-bottom: 0;
+}
+/* Site footer */
+
+.site-footer {
+  background: #eee;
+  border-top: 1px dotted #999;
+  padding: 15px 0; 
+  margin-top: 10px;
+}
+
+.the-end {
+  font-size: 12px;
 }
 
 /* Responsive */
