--- a/css/nfn.css
+++ b/css/nfn.css
@@ -251,8 +251,9 @@ img {
 .site-footer {
   background: #eee;
   border-top: 1px dotted #999;
-  padding: 15px 0; 
-  margin-top: 10px;
+  padding: 25px 0; 
+  margin-top: 15px;
+  clear: both;
 }
 
 .the-end {
