change urls and add fake index

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,14 +69,14 @@
             <div id="blq-mast" class="blq-rst">
                 <div id="blq-mast-bar">
                     <div id="blq-blocks">
-                        <a href="/">Avisen</a>
+                        <a href="local.html">Avisen</a>
                     </div>
                     <ul id="blq-nav">
                         <li>
                             <a href="buy.html">Logg inn</a>
                         </li>
                         <li>
-                            <a href="news.html">Nyheter</a>
+                            <a href="local-news.html">Nyheter</a>
                         </li>
                         <li>
                             <a href="#">Været</a>
