newsweekish footer pt 1

--- a/_layouts/zurb.html
+++ b/_layouts/zurb.html
@@ -53,7 +53,7 @@
     {{ content }}
 
 
-  <footer class="site-footer">
+<!--   <footer class="site-footer">
 
     <div class="row">
 
@@ -100,6 +100,59 @@
           <strong>Ansvarlig redaktør: </strong> <a href="mailto:fake@newsfront.no">Ola Nordmann</a>
           <span class="frontkom-logo">© 2013</span> <a href="#" >Drupal CMS: <span >Frontkom</span></a>
         </p>
+      </div>
+    </div>
+  </footer> -->
+
+  <footer class="global-footer">
+    <div class="links-bar">
+      <div class="logo-footer center">
+        <a href="/" class="inline-block"><h3 class="image-replace nf-logo-white">Newsfront</h3></a>
+      </div>
+      <div class="standard-links">
+        <ul class="inline-block">
+          <li><a href="#">About</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Advertise</a></li>
+          <li><a href="#">On Google+</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms of Use</a></li>
+        </ul>
+        <small>© 2013 The Newsweek/Daily Beast Company LLC</small>
+      </div>
+      <!-- <div class="signup subscribe-form">
+        <form method="post" action="." name="subscription-form" class="subscribe-email">
+          <input class="email-box" type="text" name="email" placeholder="Enter email for weekly updates">
+          <button class="submit" type="submit">Sign Up <span class="icon-chevron-right" aria-hidden="true"></span></button><input style="display: none" type="checkbox" name="subscriptions" value="Newsweek" checked="checked"></form><div class="message-dialog confirm">
+          <div class="icon-cell">
+        </div>
+      </div> -->
+      <div class="row">
+            <div class="large-4 columns">
+              <div class="row collapse">
+                <div class="small-10 columns">
+                  <input type="text" placeholder="Abonnér på nyhetsbrev">
+                </div>
+                <div class="small-2 columns">
+                  <a href="#" class="button prefix">Send</a>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
+    </div>
+  <div class="final-bar clearfix hide-mobile">
+      <div class="contact-info large-3 columns center">
+          <dl class="">
+            <dt>Postadresse:</dt>
+            <dd>Boks 1000 Sentrum, 0100 Oslo</dd>
+            <dt>Besøksadresse:</dt>
+            <dd>Akersgata 1, 0100 Oslo</dd>
+            <dt>Sentralbord/Redaksjonen:</dt>
+            <dd><a href="tel:+4705000">69300000</a></dd>
+          </dl>
       </div>
     </div>
   </footer>
