footer newsweekish pt 2

--- a/_layouts/zurb.html
+++ b/_layouts/zurb.html
@@ -105,32 +105,26 @@
   </footer> -->
 
   <footer class="global-footer">
-    <div class="links-bar">
-      <div class="logo-footer center">
-        <a href="/" class="inline-block"><h3 class="image-replace nf-logo-white">Newsfront</h3></a>
+    <div class="links-bar row">
+      <div class="large-4 columns">
+        <a href="/" class="footer-logo-link">
+          <h3 class="image-replace nf-logo-white">Newsfront</h3>
+        </a>
       </div>
-      <div class="standard-links">
+      <div class="standard-links large-6 columns">
         <ul class="inline-block">
-          <li><a href="#">About</a></li>
-          <li><a href="#">Press</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">Jobs</a></li>
-          <li><a href="#">Advertise</a></li>
-          <li><a href="#">On Google+</a></li>
-          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Om oss</a></li>
+          <li><a href="#">Presse</a></li>
+          <li><a href="#">Kontakt</a></li>
+          <li><a href="#">Jobb</a></li>
+          <li><a href="#">Annonsere</a></li>
+          <li><a href="#">Personvern</a></li>
           <li><a href="#">Terms of Use</a></li>
         </ul>
-        <small>© 2013 The Newsweek/Daily Beast Company LLC</small>
+        <small>© 2013 Anvarlig redaktør: Nils Nilsen. <a href="http://www.frontkom.no">Drupal CMS ved Frontkom</a></small>
       </div>
-      <!-- <div class="signup subscribe-form">
-        <form method="post" action="." name="subscription-form" class="subscribe-email">
-          <input class="email-box" type="text" name="email" placeholder="Enter email for weekly updates">
-          <button class="submit" type="submit">Sign Up <span class="icon-chevron-right" aria-hidden="true"></span></button><input style="display: none" type="checkbox" name="subscriptions" value="Newsweek" checked="checked"></form><div class="message-dialog confirm">
-          <div class="icon-cell">
-        </div>
-      </div> -->
       <div class="row">
-            <div class="large-4 columns">
+            <div class="large-4 columns right">
               <div class="row collapse">
                 <div class="small-10 columns">
                   <input type="text" placeholder="Abonnér på nyhetsbrev">
@@ -143,16 +137,18 @@
           </div>
       </div>
     </div>
-  <div class="final-bar clearfix hide-mobile">
-      <div class="contact-info large-3 columns center">
-          <dl class="">
-            <dt>Postadresse:</dt>
-            <dd>Boks 1000 Sentrum, 0100 Oslo</dd>
-            <dt>Besøksadresse:</dt>
-            <dd>Akersgata 1, 0100 Oslo</dd>
-            <dt>Sentralbord/Redaksjonen:</dt>
-            <dd><a href="tel:+4705000">69300000</a></dd>
-          </dl>
+    <div class="final-bar clearfix hide-mobile">
+      <div class="row">
+        <div class="contact-info large-12 columns center">
+            <ul class="inline-list">
+              <li><strong>Postadresse:</strong></li>
+              <li>Boks 1000 Sentrum, 0100 Oslo</li>
+              <li><strong>Besøksadresse:</strong></li>
+              <li>Akersgata 1, 0100 Oslo</li>
+              <li><strong>Sentralbord/Redaksjonen:</strong></li>
+              <li><a href="tel:+4705000">69300000</a></li>
+            </ul>
+        </div>
       </div>
     </div>
   </footer>
