--- a/css/nfn.css
+++ b/css/nfn.css
@@ -312,13 +312,11 @@ img {
   position: relative;
   text-align: center;
   width: 100%;
+  margin-top: 30px;
+  padding-top: 20px;
 }
 
 .global-footer .standard-links {
-  float: none;
-  width: 100%;
-  padding-left: 0;
-  text-align: center;
   margin: 0 auto 30px;
 }
 
@@ -349,7 +347,11 @@ img {
   overflow: hidden;
   background: #c9000d;
   margin-top: 24px;
-  padding: 8px 60px;
+  padding: 26px 60px;
+}
+
+.footer-logo-link {
+  display: inline-block;
 }
 
 
