footer done on smallest screen

--- a/_layouts/zurb.html
+++ b/_layouts/zurb.html
@@ -123,20 +123,19 @@
         </ul>
         <small>© 2013 Anvarlig redaktør: Nils Nilsen. <a href="http://www.frontkom.no">Drupal CMS ved Frontkom</a></small>
       </div>
-      <div class="row">
-            <div class="large-4 columns right">
-              <div class="row collapse">
-                <div class="small-10 columns">
-                  <input type="text" placeholder="Abonnér på nyhetsbrev">
-                </div>
-                <div class="small-2 columns">
-                  <a href="#" class="button prefix">Send</a>
-                </div>
-              </div>
+    </div>
+    <div class="row newsletter-signup">
+        <div class="large-4 columns right">
+          <div class="row collapse">
+            <div class="small-10 columns">
+              <input type="text" placeholder="Abonnér på nyhetsbrev">
+            </div>
+            <div class="small-2 columns">
+              <a href="#" class="button prefix">Send</a>
             </div>
           </div>
+        </div>
       </div>
-    </div>
     <div class="final-bar clearfix hide-mobile">
       <div class="row">
         <div class="contact-info large-12 columns center">
