--- a/_layouts/zurb.html
+++ b/_layouts/zurb.html
@@ -106,12 +106,12 @@
 
   <footer class="global-footer">
     <div class="links-bar row">
-      <div class="large-4 columns">
+      <div class="large-3 columns">
         <a href="/" class="footer-logo-link">
           <h3 class="image-replace nf-logo-white">Newsfront</h3>
         </a>
       </div>
-      <div class="standard-links large-6 columns">
+      <div class="standard-links large-9 columns">
         <ul class="inline-block">
           <li><a href="#">Om oss</a></li>
           <li><a href="#">Presse</a></li>
@@ -124,7 +124,8 @@
         <small>© 2013 Anvarlig redaktør: Nils Nilsen. <a href="http://www.frontkom.no">Drupal CMS ved Frontkom</a></small>
       </div>
     </div>
-    <div class="row newsletter-signup">
+
+    <!-- <div class="row newsletter-signup">
         <div class="large-4 columns right">
           <div class="row collapse">
             <div class="small-10 columns">
@@ -135,7 +136,8 @@
             </div>
           </div>
         </div>
-      </div>
+    </div>
+ -->    
     <div class="final-bar clearfix hide-mobile">
       <div class="row">
         <div class="contact-info large-12 columns center">
