Footer final style cleanup

--- a/_layouts/zurb.html
+++ b/_layouts/zurb.html
@@ -119,9 +119,9 @@
           <li><a href="#">Jobb</a></li>
           <li><a href="#">Annonsere</a></li>
           <li><a href="#">Personvern</a></li>
-          <li><a href="#">Terms of Use</a></li>
+          <li><a href="#">Retningslinjer</a></li>
         </ul>
-        <small>© 2013 Anvarlig redaktør: Nils Nilsen. <a href="http://www.frontkom.no">Drupal CMS ved Frontkom</a></small>
+        <small>© 2013 Navn på Avis. Anvarlig redaktør: Nils Nilsen. <a href="http://www.frontkom.no">Drupal CMS ved Frontkom</a></small>
       </div>
     </div>
 
