--- a/css/nfn.css
+++ b/css/nfn.css
@@ -220,6 +220,22 @@ body {
 }
 
 /* Article full */
+/*blockquote {
+  text-align: center;
+  color: #ed232a;
+  border-left: none;
+  font-family: "Arial Narrow",Arial,sans-serif;
+  font-size: 35px;
+  letter-spacing: 2px;
+  line-height: 38px;
+}
+
+.quotewrap {
+  max-width: 75%;
+  padding: 55px 0 50px;
+  margin: 0 auto;
+}*/
+
 figcaption {
   color: #888888;
   display: block;
@@ -242,6 +258,42 @@ img {
   display: block;
   height: auto;
   width: 100%;
+}
+
+figure.inline-media {
+  display: block;
+  float: none;
+  margin: 0 auto 20px;
+  max-width: 100%;
+  min-width: 100%;
+}
+
+.inline-media figcaption {
+  padding: 20px;
+  background: #f5f5f5;
+  margin-bottom: 25px;
+  padding: 15px 25px 20px 15px;
+  padding: 20px 20px 30px;
+}
+
+.inline-media p {
+  font-family: "Times New Roman",Times,serif;
+  font-size: 16px;
+  font-style: italic;
+  line-height: 20px;
+  margin: 0;
+  color: #666;
+  margin-top: 4px;
+}
+
+.inline-media .credit {
+  color: #999;
+  font-family: Arial,sans-serif;
+  font-size: 13px;
+  font-style: normal;
+  line-height: 20px;
+  margin-bottom: 3px;
+  margin-top: 0;
 }
 
 .fixed-width {
@@ -408,5 +460,19 @@ img {
   }
   .global-footer .standard-links {
   margin: 0 auto;
-}
+  }
+  figure.inline-media {
+    max-width: 40%;
+    min-width: 40%;
+    margin-left: 25px;
+    float: right;
+  }
+  figure.offset {
+    max-width: 80%;
+    min-width: 80%;
+    margin-right: -52.5%;
+  }
+  .inline-media figcaption {
+    padding: 20px 20px 30px;
+  }
 }
